Fixed bug with fully configured composer not creating auth.json in magento install

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "80:8000"
       - "443:8443"
     volumes: &volumes
-      - ./src:/var/www/html
+      - ./src:/var/www/html:cached
       - ~/.composer:/var/www/.composer:cached
       - ~/.ssh/id_rsa:/var/www/.ssh/id_rsa
       - ~/.ssh/known_hosts:/var/www/.ssh/known_hosts
