--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,54 @@ services:
   phpfpm:
     image: bgushurst/m2dev-phpfpm:8.1
     volumes: *volumes
+    env_file: env/phpfpm.env
+
+  db:
+    image: mariadb:10.4
+    command: --max_allowed_packet=64M
+    ports:
+      - "3306:3306"
+    env_file: env/db.env
+    volumes:
+      - dbdata:/var/lib/mysql
+
+  redis:
+    image: redis:6.2-alpine
+    ports:
+      - "6379:6379"
+
+  elasticsearch:
+    image: bgushurst/m2dev-elasticsearch:7.16
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    environment:
+      - "discovery.type=single-node"
+      ## Set custom heap size to avoid memory errors
+      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+      ## Avoid test failures due to small disks
+      ## More info at https://github.com/markshust/docker-magento/issues/488
+      - "cluster.routing.allocation.disk.threshold_enabled=false"
+      - "index.blocks.read_only_allow_delete"
+
+  rabbitmq:
+    image: bgushurst/m2dev-rabbitmq:3.9
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+    volumes:
+      - rabbitmqdata:/var/lib/rabbitmq
+    env_file: env/rabbitmq.env
+
+  mailcatcher:
+    image: sj26/mailcatcher
+    ports:
+      - "1080:1080"
+
+  node:
+    image: node:18-slim
+    volumes: *volumes
+    working_dir: /var/www/html
 
 volumes:
   dbdata:
